--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@
 /* slider end */
 
 .Grid {
-  padding: 0;
+  padding: 30px;
+  margin: 30px;
   border: 0;
   outline: 0;
   border: 0.1px solid black;
